Sat Dec 28 21:06:43 1996  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* login.c: Force environment variables like HOME to be set even if
 	-p given.

Wed Feb  5 20:56:03 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Tue Dec 24 16:08:41 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Fix up "test $ac_cv_c_cross" to deal with
	autoconf-2.12, since that variable can be set to a null string.

Fri Dec  6 00:53:08 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* v4rcp.c: Extend the platform-specific braindamage so that
 		FreeBSD works.  This whole file is eventually going to
 		need serious rototilling to make it even vaguely correct.
		[PR #284]

Fri Dec  6 00:02:25 1996  Tom Yu  <tlyu@mit.edu>

	* loginpaths.h: Add catch-all entries for LPATH and RPATH in case
	we run across something that we haven't hardcoded paths for
	yet. [267]

Thu Dec  5 21:58:28 1996  Tom Yu  <tlyu@mit.edu>

	* login.M: v5srvtab -> krb5.keytab [279]

Sun Nov 24 23:35:22 1996  Ezra Peisach  <epeisach@mit.edu>

	* login.c (try_afscall): Change to take pointer to function
		instead of only calling setpag(). [krb5-appl/190]

Fri Nov 22 15:46:46 1996  unknown  <bjaspan@mit.edu>

	* kcmd.c (kcmd): use sizeof instead of h_length to determine
 	number of bytes of addr to copy from DNS response [krb5-misc/211]

Thu Nov 14 14:30:28 1996  Barry Jaspan  <bjaspan@mit.edu>

	* krcp.c: don't print our own error message if kcmd returns -1 (it
 	always printed something in that case, and error_message(-1)
 	prints a mess [krb5-appl/70]

Mon Nov 11 23:38:05 1996  Mark Eichin  <eichin@cygnus.com>

	* krshd "plumbing" fixes

	Tue Jun 25 19:51:07 1996  Mark Eichin  <eichin@cygnus.com>

	* krshd.c (doit): ignore SIGPIPE in the child, check the return
	status of write instead.
	Added comments labelling the various file descriptors.
	Cleaned up formatting somewhat.
	Check for failure of write to child stdin pipe, and stop reading.